# fibbot-action

./: .env  Cargo.toml  Dockerfile  action.yml  readme.md  tri.txt
.github/workflow/: action.yml
.github/workflows/: action.yml  hello.yml
src/: main.rs  modify.rs
test/: integration_test
