[package]
name = "fibbot"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", optional = true }
openssl-sys = { version = "0.9", features = ["vendored"] }
serde_json = "1.0" 
anyhow = "1.0"
thiserror = "2.0"